# why

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  flake.nix  install.sh  qwen2.5-coder-0.5b.gguf
.github/workflows/: ci.yml  release.yml
eval/: errors.csv  errors.yaml
examples/: README.md  bash_unbound.sh  c_segfault.c  go_nil_panic.go  java_npe.java  js_undefined.js  python_error1.py  python_import.py  python_key_error.py  python_recursion.py  ruby_nil.rb  rust_borrow.rs  shell_command_not_found.sh  typescript_type_error.ts
scripts/: embed.sh  eval.py
src/: cli.rs  config.rs  context.rs  daemon.rs  hooks.rs  lib.rs  main.rs  model.rs  output.rs  prompt.txt  stack_trace.rs  watch.rs
src/prompts/: chatml.txt  gemma.txt
src/providers/: anthropic.rs  local.rs  mod.rs  openai.rs  openrouter.rs
