[package]
name = "why"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = "0.1"
anyhow = "1.0"
encoding_rs = "0.8"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textwrap = "0.16"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[profile.release]
opt-level = "z"
lto = true
strip = true
